--- a/index.html
+++ b/index.html
@@ -45,25 +45,6 @@ body {
   text-align: center;
 }
 
-input {
-  width: 100%;
-  padding: 12px;
-  border-radius: 25px;
-  border: none;
-  text-align: center;
-  margin-top: 16px;
-}
-
-button {
-  margin-top: 18px;
-  padding: 12px 28px;
-  border-radius: 30px;
-  border: none;
-  background: crimson;
-  color: white;
-  cursor: pointer;
-}
-
 /* INTRO */
 #intro {
   position: fixed;
@@ -92,7 +73,7 @@ button {
   justify-content: center;
 }
 
-/* DAY CARD */
+/* DAY */
 .day {
   width: 100%;
   height: 100%;
@@ -152,7 +133,7 @@ button {
 
 <body>
 
-<!-- LOCK -->
+<!-- 🔐 LOCK -->
 <div id="lockScreen">
   <div class="lock-box">
     <h2>For Rohini ❤️</h2>
@@ -161,7 +142,7 @@ button {
   </div>
 </div>
 
-<!-- INTRO -->
+<!-- 🎬 INTRO -->
 <div id="intro">
   <div>
     <h1 class="fade">Every love story is beautiful…</h1>
@@ -169,14 +150,15 @@ button {
   </div>
 </div>
 
-<!-- STORY -->
+<!-- 📖 STORY -->
 <div id="app">
 
   <!-- 🎆 New Year -->
   <div class="day">
     <h2>🎆 New Year</h2>
     <p class="note">
-      A new year, same us ❤️<br><br>
+      A new year, the same hearts walking together.<br>
+      புதிய வருடம்… அதே காதல், அதே நாம்கள் ❤️<br><br>
       More memories coming soon… ✨
     </p>
   </div>
@@ -186,8 +168,8 @@ button {
     <h2>🌹 Rose Day</h2>
     <div class="photo"><img src="rose.jpg"></div>
     <p class="note">
-      Our love bloomed beautifully 🌹<br>
-      நம்ம காதல் ஒரு அழகான மலராக மலர்ந்த நாள்
+      Just like a rose, my love for you grows more beautiful every day.<br>
+      இந்த ரோஜா போல, என் காதலும் தினம் தினம் மலர்கிறது 🌹
     </p>
   </div>
 
@@ -196,8 +178,8 @@ button {
     <h2>💍 Propose Day</h2>
     <div class="photo"><img src="propose.jpg"></div>
     <p class="note">
-      I promised you my forever 💍<br>
-      என் வாழ்கையின் எல்லா நாள்களும் உன்னோடே
+      I may not propose every day, but my heart chooses you again and again.<br>
+      வார்த்தையில்லாமல் கூட, என் இதயம் தினமும் உன்னையே தேர்ந்தெடுக்கிறது 💍
     </p>
   </div>
 
@@ -206,8 +188,8 @@ button {
     <h2>🍫 Chocolate Day</h2>
     <div class="photo"><img src="chocolate.jpg"></div>
     <p class="note">
-      The sweetest moments are the simplest 🍫<br>
-      சின்ன சின்ன நிமிஷங்கள்தான் வாழ்க்கையின் இனிமை
+      Life with you is sweeter than any chocolate in the world.<br>
+      உன்னோடு வாழ்க்கை… உலகின் எந்த இனிப்பையும் விட இனிமை 🍫
     </p>
   </div>
 
@@ -216,8 +198,8 @@ button {
     <h2>🧸 Teddy Day</h2>
     <div class="photo"><img src="teddy.jpg"></div>
     <p class="note">
-      Everything feels cute with you 🧸<br>
-      நீ இருக்கும்போது எல்லாமே அழகா இருக்குது
+      If I could, I’d be your teddy — always there to comfort you.<br>
+      உன்னை தேற்ற, நான் எப்போதும் உன்னோடு இருக்கும் teddy தான் 🧸
     </p>
   </div>
 
@@ -226,8 +208,8 @@ button {
     <h2>🤞 Promise Day</h2>
     <div class="photo"><img src="promise.jpg"></div>
     <p class="note">
-      Forever by your side 🤞<br>
-      எப்போதும் உன் பக்கம் நின்று கொண்டே இருப்பேன்
+      I promise to stand by you, support you, and love you forever.<br>
+      உன்னோடு நிற்பதே என் உறுதி… என்றும் 🤞
     </p>
   </div>
 
@@ -236,8 +218,8 @@ button {
     <h2>🤗 Hug Day</h2>
     <div class="photo"><img src="hug.jpg"></div>
     <p class="note">
-      Your hug feels like home 🤍<br>
-      உன் அணைப்பு தான் என் வீடு
+      Whenever life feels heavy, my arms are always open for you.<br>
+      உலகம் சுமையாக இருந்தாலும், என் கரங்கள் உனக்கே 🤍
     </p>
   </div>
 
@@ -246,8 +228,8 @@ button {
     <h2>😘 Kiss Day</h2>
     <div class="photo"><img src="kiss.jpg"></div>
     <p class="note">
-      Some feelings need no words 😘<br>
-      சில உணர்வுகளுக்கு வார்த்தைகள் தேவையில்லை
+      Every kiss is a reminder of how deeply I love you.<br>
+      ஒவ்வொரு முத்தமும்… என் காதலின் சாட்சி 😘
     </p>
   </div>
 
@@ -256,15 +238,15 @@ button {
     <h2>❤️ Valentine’s Day</h2>
     <div class="photo"><img src="valentine.jpg"></div>
     <p class="note">
-      Two hearts. One life. Forever ❤️<br>
-      இரண்டு இதயங்கள்… ஒரு வாழ்க்கை… எப்போதும்
+      You are my today, my tomorrow, and my forever.<br>
+      இன்று… நாளை… என்றும்… நீயே ❤️
     </p>
     <button onclick="openLove()">🎁 Open Surprise</button>
   </div>
 
 </div>
 
-<!-- LOVE POPUP -->
+<!-- 💌 LOVE POPUP -->
 <div class="popup" id="lovePopup">
   <div class="popup-content">
     <h2>My Rohini 💌</h2>
@@ -273,13 +255,30 @@ button {
   </div>
 </div>
 
+<!-- 🎵 MUSIC -->
+<audio id="dayMusic" loop></audio>
+
 <script>
 const TEST_MODE = false;
 const allowedPasswords = ['rohini','kannamma'];
 
+const songs = [
+  "songs/newyear.mp3",
+  "songs/rose.mp3",
+  "songs/propose.mp3",
+  "songs/chocolate.mp3",
+  "songs/teddy.mp3",
+  "songs/promise.mp3",
+  "songs/hug.mp3",
+  "songs/kiss.mp3",
+  "songs/valentine.mp3"
+];
+
 const dayCards = document.querySelectorAll('.day');
+const dayMusic = document.getElementById('dayMusic');
 let activeIndex = 0;
 
+/* 🔓 UNLOCK */
 function unlock() {
   if (!allowedPasswords.includes(password.value.toLowerCase())) {
     alert('Wrong password 💔');
@@ -290,29 +289,62 @@ function unlock() {
   intro.style.display = 'grid';
 
   setTimeout(() => intro.style.display = 'none', 6000);
-
-  if (TEST_MODE) showDay(0);
-  else showDay(dayCards.length - 1);
+  showInitialDay();
 }
 
-function allowedMaxIndex() {
-  if (TEST_MODE) return dayCards.length - 1;
-
+/* 📅 PROD LOGIC */
+function showInitialDay() {
   const d = new Date();
-  if (d.getMonth() === 1 && d.getDate() >= 14) return dayCards.length - 1;
+  const isFeb = d.getMonth() === 1;
+  const today = d.getDate();
 
-  return dayCards.length - 1;
+  if (TEST_MODE) {
+    showDay(0);
+    return;
+  }
+
+  if (!isFeb) {
+    showDay(0); // New Year only
+    return;
+  }
+
+  // Feb 7 is Rose Day → index 1
+  let maxIndex = today - 6;
+
+  if (today >= 14) {
+    maxIndex = dayCards.length - 1;
+  }
+
+  activeIndex = Math.max(0, Math.min(maxIndex, dayCards.length - 1));
+  showDay(activeIndex);
 }
 
+/* 📖 SHOW DAY */
 function showDay(i) {
   dayCards.forEach(d => d.style.display = 'none');
   dayCards[i].style.display = 'flex';
   activeIndex = i;
+
+  if (songs[i]) {
+    dayMusic.src = songs[i];
+    dayMusic.volume = 0.4;
+    dayMusic.play().catch(()=>{});
+  }
 }
 
+/* ⬅️➡️ NAV */
 function next() {
-  if (activeIndex < allowedMaxIndex()) showDay(activeIndex + 1);
+  const d = new Date();
+  if (!TEST_MODE && d.getMonth() === 1 && d.getDate() < 14) {
+    const maxIndex = d.getDate() - 6;
+    if (activeIndex >= maxIndex) return;
+  }
+
+  if (activeIndex < dayCards.length - 1) {
+    showDay(activeIndex + 1);
+  }
 }
+
 function prev() {
   if (activeIndex > 0) showDay(activeIndex - 1);
 }
@@ -329,13 +361,12 @@ document.addEventListener('keydown', e => {
   if (e.key === 'ArrowLeft') prev();
 });
 
+/* 💌 LOVE */
 function openLove() {
-  if (!TEST_MODE) {
-    const d = new Date();
-    if (!(d.getMonth() === 1 && d.getDate() === 14)) {
-      alert("Unlocks on Valentine's Day ❤️");
-      return;
-    }
+  const d = new Date();
+  if (!TEST_MODE && !(d.getMonth() === 1 && d.getDate() === 14)) {
+    alert("Unlocks on Valentine's Day ❤️");
+    return;
   }
   lovePopup.style.display = 'grid';
   typeLoveText();
@@ -348,11 +379,14 @@ function closeLove() {
 
 function typeLoveText() {
   const text = `Loving you is the best decision of my life.
+Every smile of yours completes me.
 
 No matter where life takes us,
-my heart will always choose you ❤️
+my heart will always find its way back to you.
 
-எப்போதும்… உன்னோடு`;
+Always…
+with you ❤️`;
+
   let i = 0;
   const t = setInterval(() => {
     loveText.innerHTML += text.charAt(i++);
